Revert "Fix manual container overflow bug"
This reverts commit 5fc47c5b92a8c5f696a46e75d3b26504ff8b2e93.

--- a/PageRoot/www/scss/index.scss
+++ b/PageRoot/www/scss/index.scss
@@ -1037,9 +1037,6 @@ body {
         .manual-content {
             display: none;
         }
-        .manual-content-container {
-            overflow-y: auto;
-        }
     }
 }
 
